updated styles and corrected alignment

--- a/prj_bms/bms/static/css/offcanvas.css
+++ b/prj_bms/bms/static/css/offcanvas.css
@@ -65,13 +65,14 @@ body {
 .nav-underline .active {
   font-weight: 500;
   color: #343a40;
+  background-color: rgb(223, 224, 222);
 }
 
 .text-white-50 { color: rgba(255, 255, 255, .5); }
 
 .bg-purple { background-color: #6f42c1; }
 .bg-navy {   background-color: #001f3f; }
-
+.bg-orange{ background-color: #f47a19;}
 .lh-100 { line-height: 1; }
 .lh-125 { line-height: 1.25; }
 .lh-150 { line-height: 1.5; }
