--- a/prj_bms/bms/static/css/style.css
+++ b/prj_bms/bms/static/css/style.css
@@ -220,3 +220,9 @@
 .rtl table tr td:nth-child(2) {
   text-align: left;
 }
+
+
+
+.link-row{
+  cursor: pointer;
+}
